--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_Flujo_Caja">
-        <activity android:name=".CompanyInformation"></activity>
+        <activity android:name=".CommercialInterest"></activity>
+        <activity android:name=".CompanyInformation" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
