--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_Flujo_Caja">
+        <activity android:name=".sueldos"></activity>
+        <activity android:name=".aportepatronal" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
