--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_Flujo_Caja">
-        <activity android:name=".proyeccion_ventas"></activity>
+        <activity android:name=".iue"></activity>
+        <activity android:name=".it" />
+        <activity android:name=".iva" />
+        <activity android:name=".menu_impuestos" />
+        <activity android:name=".proyeccion_ventas" />
         <activity android:name=".sueldos" />
         <activity android:name=".aportepatronal" />
         <activity android:name=".CommercialInterest" />
