--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_Flujo_Caja">
-        <activity android:name=".presupuesto_caja"
-            android:exported="true"></activity>
+        <activity android:name=".grafico"></activity>
+        <activity
+            android:name=".presupuesto_caja"
+            android:exported="true" />
         <activity android:name=".comprass" />
         <activity android:name=".financiamiento" />
         <activity android:name=".iue" />
