--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_Flujo_Caja">
-        <activity android:name=".FlujoSemestral"></activity>
-        <activity android:name=".FlujoAnual"></activity>
+        <activity android:name=".flujo_caja5"></activity>
+        <activity android:name=".FlujoSemestral" />
+        <activity android:name=".FlujoAnual" />
         <activity android:name=".menu_FlujoDeCaja" />
         <activity android:name=".Inicio">
             <intent-filter>
